2010-06-09  Dan Nicolaescu  <dann@ics.uci.edu>

	Add optional support for resetting VC properties.
	* vc-dispatcher.el (vc-resynch-window): Add new optional argument,
	call vc-file-clearprops when true.
	(vc-resynch-buffer): Add new optional argument, pass it down.
	(vc-resynch-buffers-in-directory): Likewise.

	Improve support for special markup in the VC commit message.
	* vc-mtn.el (vc-mtn-checkin): Add support for Author: and Date: markup.
	* vc-hg.el (vc-hg-checkin): Add support for Date:.
	* vc-git.el (vc-git-checkin):
	* vc-bzr.el (vc-bzr-checkin): Likewise.

2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent-keyword): Remove special case that
	can be handled with a ((:before "fn") (:prev "=>" parent)) rule.

2010-06-07  Martin Pohlack  <mp26@os.inf.tu-dresden.de>

	* iimage.el: Remove images as soon as the underlying text is modified.
	(iimage-modification-hook): New function.
	(iimage-mode-buffer): Use it.

2010-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent-offset-rule): Rename from
	smie-indent-offset-after.  Add :prev case.  Make a bit more generic.
	(smie-indent-virtual): Remove `virtual' arg.  Update callers.
	(smie-indent-keyword): Add handling of open-paren keywords.
	(smie-indent-comment-continue): Don't assume comment-continue.

2010-06-07  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-to-buffer): Remove the conditional that
	compares new-window and old-window, so it will reselect
	the selected window unconditionally.
	http://lists.gnu.org/archive/html/emacs-devel/2010-06/msg00078.html

2010-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent-offset-after)
	(smie-indent-forward-token, smie-indent-backward-token): New functions.
	(smie-indent-after-keyword): Use them.
	(smie-indent-fixindent): Only applies to the indentation of the BOL.
	(smie-indent-keyword): Tweak the black magic.